# MarkdownTool

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  INSTALL.md  MANIFEST.in  Makefile  PROJECT_STRUCTURE.md  PRP-Modern-UI-Settings.md  README.md  ai_service.py  docker-compose.yml  install.bat  install.ps1  markdown_manager.spec  markdown_manager_simple.spec  markdown_viewer.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.bat  run_app.py  setup.py  simple.spec  simple_markdown_manager.py  version_info.txt
.claude/: settings.local.json
.fyiai/cloud/sync/: config.json
.github/workflows/: build-exe.yml  ci.yml  release.yml
assets/: create_icon.py
config/: __init__.py  settings.py
deployment/: kubernetes.yaml
docs/: BUILDING_EXE.md  CONTRIBUTING.md  DEPLOYMENT.md  INSTALLER_GUIDE.md
docs/prps/: ai-markdown-summarization.md  inline-markdown-editor.md  markdown-link-navigation-solutions.md
docs/research/: md-reader-improvement-report.md
installer/: LICENSE.txt  MarkdownManager.iss  README-INSTALLER.txt  SETUP-COMPLETE.txt
release/: .env.example  CHANGELOG.txt  RELEASE-NOTES.txt
scripts/: build_exe.bat  build_exe.py  build_installer.bat  build_installer.py  setup_dev.py
src/markdown_manager/: __init__.py  ai_service.py  app.py  azure_sync_service.py  cli.py
src/markdown_manager/sessions/: recent_projects.json
test_files/: README.md  api_test.md  guide.md  links_test.md
test_files/subfolder/: notes.md
tests/: __init__.py  conftest.py  test_azure_sync_service.py
